[gd_scene load_steps=3 format=3 uid="uid://mdi8lidanwuv"]

[ext_resource type="Script" path="res://ui/presets_list.gd" id="1_rqawt"]
[ext_resource type="Texture2D" uid="uid://buf8fwb8elbhb" path="res://ui/assets/icons/add_16.png" id="2_ax3od"]

[node name="PresetsList" type="PanelContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 93.0
grow_vertical = 2
script = ExtResource("1_rqawt")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="PresetList" type="GridContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="AddContainer" type="HBoxContainer" parent="Margin/VBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="PresetNameTxt" type="LineEdit" parent="Margin/VBox/AddContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Preset name"

[node name="AddPresetBtn" type="Button" parent="Margin/VBox/AddContainer"]
modulate = Color(0.707967, 0.707966, 0.707966, 1)
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Add preset"
icon = ExtResource("2_ax3od")
icon_alignment = 1

[connection signal="pressed" from="Margin/VBox/AddContainer/AddPresetBtn" to="." method="_on_add_preset_btn_pressed"]
